add google maps

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <p id="userIP"></p>
   <p id="userDevice"> </p>
   <p id="userLocation"></p>
+  <button id="openMap" style="background-color: red;">VIEW ON GOOGLE MAPS (might be a little off)</button>
   <p id="batteryInfo"> </p>
 
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
